[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pystack3d_napari"
version = "2026.2"
description = "Pystack3D-napari: A Python package for fast image stack correction with its dedicated GUI"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "GPL v3" }
authors = [{ name = "Patrick Quéméré", email = "patrick.quemere@cea.fr" }]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Framework :: napari",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License"
]

dependencies = [
    "napari",
    "dask[array]",
    "numba",
    "pystack3d"
]

[project.scripts]
pystack3d = "pystack3d_napari.main:launch"

[tool.setuptools.package-data]
pystack3d_napari = ["resources/**/*.svg"]

[project.urls]
Repository = "https://github.com/CEA-MetroCarac/pystack3d_napari.git"
Issues = "https://github.com/CEA-MetroCarac/pystack3d_napari/issues"